# ChatWithMyCV

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.template  pyproject.toml
.streamlit/: secrets.toml.template
chatwithmycv/: ask.py  build_index.py  chat.py  download_data.py
data/: cv_explanations_template.txt
